Fix tree-view horizontal scroll by removing extra overflow: hidden

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -48,7 +48,6 @@
         position: relative;
         color: @text-color;
         cursor: pointer;
-        overflow:hidden;
 
         &.file {
           margin-left: 2px !important;
